--- a/build.kv
+++ b/build.kv
@@ -18,9 +18,9 @@
         text: "Apply"
         size_hint: 0.2,0.15
     Label:
-        pos_hint: {"X":0.45, "top":1}
+        pos_hint: {"right":0.8, "top":1}
         text: "ToDoList"
         size_hint: 0.25,0.15
     TextInput:
         pos_hint:{"x":0.1, "top":0.9}
-        size_hint: 0.25,0.15
+        size_hint: 0.35,0.1
