--- a/build.kv
+++ b/build.kv
@@ -10,17 +10,22 @@
 
 <FloatLayout>:
     Button:
+        id:Add
         pos_hint: {"x":0.15, "top":0.2}
         text: "Add Task"
         size_hint: 0.25,0.12
+        on_press: app.callback()
     Button:
+        id:apply
         pos_hint: {"x":0.65, "top":0.2}
         text: "Apply"
         size_hint: 0.2,0.12
+
     Label:
         pos_hint: {"right":0.62, "top":1}
         text: "ToDoList"
         size_hint: 0.25,0.15
     TextInput:
+        id:input
         pos_hint:{"x":0.1, "top":0.3}
         size_hint: 0.35,0.1
